--- a/.vscode/pagina.html
+++ b/.vscode/pagina.html
@@ -7,17 +7,17 @@
     <title>X</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="cuerpo">
-<header>
-    <div class="menu">
-        <img class="logo" src="/imagenes/log.jpg" alt="">
+<header class="cabecera">
+    <div class="slider">
+      <ul>
+        <li><img src="/imagenes/1.jpg_large" alt=""></li>
+        <li><img src="/imagenes/2.jpg" alt=""></li>
+        <li><img src="/imagenes/3.jpg" alt=""></li>
+        <li><img src="/imagenes/4.jpg" alt=""></li>
+      </ul>
+
     </div>
-    <ul>
-    <li class="lista">camisetas</li>
-    <li class="lista">camperas</li>
-    <li class="lista">login</li>
-    <li class="lista">registrarse</li>
-    </ul>
 </header>
+<body class="cuerpo">
 </body>
 </html>
